--- a/Try.html
+++ b/Try.html
@@ -526,7 +526,7 @@
         <div class="container">
             <div class="social-links">
                 <a href="#"><i class="fab fa-twitter">Twitter</i></a>
-                <a href="#"><i class="fab fa-instagram">Instagram</i></a>
+                <a href="https://www.instagram.com/its_deva.24/?hl=en"><i class="fab fa-instagram">Instagram</i></a>
                 <a href="#"><i class="fab fa-youtube">YouTube</i></a>
                 <a href="#"><i class="fab fa-linkedin">LinkedIn</i></a>
             </div>
